k8s/mud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mud
spec:
    replicas: 2
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
        #   maxUnavailable: 25%
    selector:
        matchLabels:
            app: mud
    replicas: 1
    template:
        metadata:
            labels:
                app: mud
        spec:
            containers:
            -   name: mud
                image: gcr.io/kalschi-agones/mud:v6
                imagePullPolicy: Always
                ports:
                    -   name: ws
                        containerPort: 8080
                livenessProbe:
                    tcpSocket:
                        port: 8080
                    initialDelaySeconds: 30
                readinessProbe:
                    tcpSocket:
                        port: 8080
                    initialDelaySeconds: 30
                # env:
                #     -   name: PROJECT_ID
                #         value: kalschi-agones
                #     -   name: LOCATION
                #         value: global
                #     -   name: NAMESPACE
                #         valueFrom:
                #             fieldRef:
                #                 fieldPath: metadata.namespace
                #     -   name: CONTAINER
                #         value: "dialogflow-fulfillment"
