k8s/mud-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mud
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"ports": {"8080":"mud-backendconfig"}}'
spec:
  sessionAffinity: ClientIP 
  selector:
    app: mud
  ports:
  - protocol: TCP
    port: 8080
    name: mud
    targetPort: 8080
  type: ClusterIP
